--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -2,18 +2,18 @@
 <h2>My top 3 movies of all-time.</h2>
 <hr />
 <h3>Ready Player One</h3>
-<img src="/4.3 HTML Porfolio Project/assets/images/RPO.jpg" 
+<img src="../assets/images/RPO.jpg" 
     width="400"
     alt="Ready Player One poster"/>
 <p>Metaverses have always been a weekness of mine.</p>
 <h3>Harry Potter</h3>
-<img src="/4.3 HTML Porfolio Project/assets/images/harry-potter.jpg"
+<img src="../assets/images/harry-potter.jpg"
     width="400"
     alt="Ron Weasley, Harry Potter, Hermione Granger"/>
     <b/>
 <p>The entire series.</p>
 <h3>Fast & Furious</h3>
-<img src="/4.3 HTML Porfolio Project/assets/images/FF.jpg"
+<img src="../assets/images/FF.jpg"
     width="400"
     alt="Main cast of Fast and Furious"/>
 <p>There's just nothing like the Fast franchise. RIP Paul Walker.</p>
