--- a/public/about.html
+++ b/public/about.html
@@ -1,5 +1,5 @@
 <h1>About Me</h1>
-<img src="/4.3 HTML Porfolio Project/assets/images/Me.jpg"
+<img src="../assets/images/Me.jpg"
 width="300"
 alt="Michael wearing a suit and tie" />
 <h2>My Story</h2>
