--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,7 +1,7 @@
 <h1>Isaiah's Birthday Party</h1>
 <h2>March 16th, at 5pm</h2>
 <h3>Pizza Hut in Kendallville</h3>
-<img src="https://i.etsystatic.com/15729766/r/il/b0a354/3024461830/il_fullxfull.3024461830_dz2a.jpg" 
+<img src="../assets/images/Avengers.jpg" 
      width="415" 
      height="415"
         alt="The Avengers lined up looking strong with Spiderman front and center"/>
